simplified logging, removed unused imports, verified casts, tightened up here and there